# ean-13-recognition

./: .gitignore  CMakeLists.txt  GenerateCode.java  LICENSE  README.md  barcode.cpp  barcode.h  code_128.cpp  code_128.h  code_128_constant.h  code_36.cpp  code_36.h  code_36_constant.h  ean_13.cpp  ean_13.h  ean_13_constant.h  main.cpp  resources.h
